fix: sidenav visibility on all 3 screen sizes

--- a/src/styles/atomics.sass
+++ b/src/styles/atomics.sass
@@ -100,7 +100,7 @@ h1.title
   .hideOnMobile
     display: none !important
 
-@include media('>tablet')
+@include media('>=tablet')
   .onlyForMobile
     display: none !important
 
