--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -221,7 +221,8 @@ body
   padding: 0
   min-width: 370px
   background: none
-  background-color: var(--color-b-j)
+footer
+  background-color: var(--chroma-secondary-a)
 
 h1
   @include TypeHeadline3()
